# mai_os_lab

./: README.md
lab1/:   .gitignore  212_Брежнев_Лаб1.docx  README.md  child1.c  child2.c  parent.c
lab2/: .gitignore  CMakeLists.txt  README.md  adaptive_sum.c  array_sum.h  main.c  utils.c
lab2/src/: main.c
lab3/: 212_Брежнев_Лаб3.docx  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  out1.txt  out2.txt  parent.c  reverse_writer  reverse_writer.c
